--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -229,7 +229,7 @@ main {
             color: red;
             width: 250px;
             letter-spacing: 2px;
-            box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+            box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;  
           }
           a:hover{
             color: $primary-color;
@@ -592,7 +592,7 @@ main {
               li {
                 font-size: 0.9rem;
                 strong {
-                  color: $primary-color;
+                  color: $black;
                 }
               }
             }
@@ -699,7 +699,7 @@ main {
               font-size: 1rem;
 
               strong {
-                color: $primary-color;
+                color: $black;
               }
             }
           }
@@ -709,7 +709,7 @@ main {
               li {
                 font-size: 0.9rem;
                 strong {
-                  color: $primary-color;
+                  color: $black;
                 }
               }
             }
@@ -735,7 +735,10 @@ main {
       .service--cards {
         .card--item {
           width: 100%;
-
+          height: 450px;
+          .card--img{
+            height: 250px;
+          }
         }
       }
 
@@ -746,7 +749,7 @@ main {
           background-color: #fff;
           font-size: 1.4rem;
           text-transform: uppercase;
-          color: $primary-color;
+          color: $color-dark;
         }
       }
     }
