--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -18,7 +18,6 @@ header {
     .logo {
       img {
         width: 140px;
-        margin-top: 20px;
         display: block;
       }
     }
@@ -64,7 +63,7 @@ header {
 
   .headerInfo {
     padding-top: 70px;
-    background-color: $primary-color;
+    background-color: #CEE3FD;
     .overflow {
       .header {
         display: flex;
@@ -79,7 +78,7 @@ header {
           display: flex;
           flex-direction: column;
           flex-wrap: wrap;
-          gap: 20px;
+          gap: 7px;
 
           .titleHeader {
             display: flex;
@@ -369,7 +368,7 @@ header {
             gap: 20px;
             .titleHeader {
               h1{
-              color: $white;
+              color: $color-dark;
               font-size: 1.9rem;
               margin-top: 40px;
               }
@@ -377,7 +376,7 @@ header {
             .subtitleHeader {
               font-size: 1rem;
               font-weight: 400;
-              color: #ffffffb4;
+              color: $gray-dark;
               margin-bottom: 15px;
             }
           }
