--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -401,6 +401,13 @@ header {
         }
       }
     }
+    .ajustHeader{
+      .logo{
+        img{
+          width: 110px;
+        }
+      }
+    }
   }
 }
 
