--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -360,6 +360,7 @@ header {
 @media (max-width: 576px) {
   header {
     .headerInfo {
+      background-color: #fff;
       .overflow {
         .header {
           height: 320vh;
