--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -62,16 +62,14 @@ header {
   }
 
   .headerInfo {
-    padding-top: 70px;
-    background-color: #CEE3FD;
+    background-color: $primary-color;
     .overflow {
       .header {
         display: flex;
         flex-direction: row;
-        align-items: flex-start;
+        align-items: center;
         justify-content: center;
-        height: 100vh;
-        padding-top: 122px;
+        height: 90vh;
 
         .col1 {
           flex: 1;
@@ -83,18 +81,23 @@ header {
           .titleHeader {
             display: flex;
             justify-content: flex-start;
-            h1{
-            color:$color-dark;
-            font-size: 2.2rem;
-            font-weight: bold;
-            text-transform: uppercase;
+            h1 {
+              color: $color-dark;
+              font-size: 2.2rem;
+              font-weight: bold;
+              text-transform: uppercase;
+              max-width: 90%;
             }
           }
           .subtitleHeader {
-            color:$gray-dark;
-            font-size: 1rem;
+            color: $gray-dark;
+            font-size: 1.2rem;
             font-weight: 400;
             margin-bottom: 36px;
+
+            strong {
+              font-weight: normal;
+            }
           }
 
           .contactHeader {
@@ -122,12 +125,22 @@ header {
         }
         .col2 {
           flex: 0.7;
+          height: 100%;
+          display: flex;
+          align-items: flex-end;
+          .imgHeader {
+            display: flex;
+            justify-content: center;
+            img {
+              width: 70%;
+            }
+          }
         }
       }
 
       .cardsHeaderContainer {
         position: absolute;
-        top: 82vh;
+        top: 100vh;
         width: 100%;
         display: flex;
         flex-direction: row;
@@ -184,10 +197,11 @@ header {
       color: $primary-light;
     }
 
-    video{
-      box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    video {
+      box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+        rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+        rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
       background-color: #000;
-      
     }
   }
   .close {
@@ -198,9 +212,9 @@ header {
 .contact {
   button {
     background-color: transparent;
-    a{
+    a {
       color: $secondary-color;
-      display: block;      
+      display: block;
       width: 150px;
       height: 45px;
       border-radius: 10px;
@@ -218,7 +232,70 @@ header {
     color: $white;
     background-color: $color-dark;
     border: 2px solid $color-dark;
+  }
+}
 
+@media (max-width: 576px) {
+  header {
+    .headerInfo {
+      background-color: #fff;
+      .overflow {
+        .header {
+          height: 212vh;
+          flex-direction: column-reverse;
+          .col1 {
+            gap: 20px;
+            .titleHeader {
+              h1 {
+                color: $color-dark;
+                font-size: 1.5rem;
+                margin-top: 40px;
+              }
+            }
+            .subtitleHeader {
+              font-size: 1rem;
+              font-weight: 400;
+              color: $gray-dark;
+              margin-bottom: 15px;
+            }
+          }
+          .col2 {
+            flex: 0.1;
+
+            .imgHeader {
+              img {
+                width: 100%;
+              }
+            }
+          }
+        }
+
+        .cardsHeaderContainer {
+          top: 105vh;
+          flex-direction: column;
+          gap: 7px;
+          .card-item {
+            width: 100%;
+          }
+        }
+      }
+    }
+    .ajustHeader {
+      .logo {
+        img {
+          width: 110px;
+        }
+      }
+    }
+  }
+}
+
+@keyframes animationBtbMenu {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
   }
 }
 
@@ -252,7 +329,6 @@ header {
         display: none;
         flex-direction: column;
         align-items: center;
-        // justify-content: center;
         position: fixed;
         height: 80vh;
         left: 50%;
@@ -294,20 +370,20 @@ header {
     }
 
     .headerInfo {
+      height: 150vh;
       .overflow {
         .header {
-          padding-top: 50px;
+          padding-top: 227px;
           flex-direction: column-reverse;
           height: 100vh;
-          
+
           .col1 {
             gap: 10px;
-
             .titleHeader {
-              h1{
-              color: $color-dark;
-              font-size: 1.6rem;
-              margin-top: 40px;
+              h1 {
+                color: $color-dark;
+                font-size: 1.6rem;
+                margin-top: 40px;
               }
             }
             .subtitleHeader {
@@ -319,20 +395,18 @@ header {
           }
 
           .col2 {
-
-           
             .imgHeader {
-              display: flex;
+              display: none;
               justify-content: center;
               img {
-                width: 60%;
+                width: 60 %;
               }
             }
           }
         }
 
         .cardsHeaderContainer {
-          top: 84vh;
+          top: 130vh;
           // flex-direction: column;
           justify-content: center;
           align-items: center;
@@ -343,7 +417,7 @@ header {
             padding: 35px 5px;
             div {
               height: 50px;
-              img{
+              img {
                 width: 80px;
               }
               h3 {
@@ -357,66 +431,26 @@ header {
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 996px) {
   header {
     .headerInfo {
-      background-color: #fff;
       .overflow {
+        
         .header {
-          height: 212vh;
-          flex-direction: column-reverse;
-          .col1 {
-            gap: 20px;
-            .titleHeader {
-              h1{
-              color: $color-dark;
-              font-size: 1.5rem;
-              margin-top: 40px;
-              }
-            }
-            .subtitleHeader {
-              font-size: 1rem;
-              font-weight: 400;
-              color: $gray-dark;
-              margin-bottom: 15px;
-            }
-          }
+          height: 100vh;
+
           .col2 {
-            flex: 0.1;
-
+            flex: 0.7;
+            height: 100%;
+            display: flex;
+            align-items: center;
             .imgHeader {
-              img {
-                width: 100%;
-              }
+              display: flex;
+              justify-content: center;
             }
           }
         }
-
-        .cardsHeaderContainer {
-          top: 105vh;
-          flex-direction: column;
-          gap: 7px;
-          .card-item {
-            width: 100%;
-          }
-        }
       }
     }
-    .ajustHeader{
-      .logo{
-        img{
-          width: 110px;
-        }
-      }
-    }
-  }
-}
-
-@keyframes animationBtbMenu {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-20px);
   }
 }
