--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -56,6 +56,11 @@ main {
         gap: 40px;
 
         .titleLocation {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          letter-spacing: 1px;
+          font-weight: normal;
           p {
             font-weight: 400;
             font-size: 1.2rem;
@@ -71,6 +76,11 @@ main {
               font-weight: 600;
             }
           }
+          p:last-child{
+            font-size: 1rem;
+            text-align: justify;
+            
+          }
         }
 
         .textLocation {
@@ -78,7 +88,7 @@ main {
 
           p {
             font-size: 1rem;
-            font-weight: 300;
+            font-weight: normal;
             text-indent: 30px;
             text-align: justify;
             strong {
@@ -188,7 +198,7 @@ main {
         flex: 1;
         display: flex;
         flex-direction: column;
-        gap: 40px;
+        gap: 20px;
         .title-two {
           h3 {
             font-weight: 400;
@@ -201,10 +211,16 @@ main {
           }
         }
         .listService {
+          p:first-child{
+            color: $color-dark;
+            font-weight: 600;
+            padding-bottom: 20px;
+          }
           ul {
             display: flex;
             flex-direction: column;
             gap: 8px;
+            padding-bottom: 100px;
             li {
               i {
                 padding-right: 10px;
@@ -575,6 +591,7 @@ main {
             p {
               font-size: 16px;
             }
+
           }
         }
         .colSection-two {
