--- a/scss/style.css
+++ b/scss/style.css
@@ -114,14 +114,15 @@ header .headerInfo .overflow .header .col2 {
   flex: 0.7;
   height: 100%;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
+  padding-top: 150px;
 }
 header .headerInfo .overflow .header .col2 .imgHeader {
   display: flex;
   justify-content: center;
 }
 header .headerInfo .overflow .header .col2 .imgHeader img {
-  width: 70%;
+  width: 100%;
 }
 header .headerInfo .overflow .cardsHeaderContainer {
   position: absolute;
@@ -325,7 +326,7 @@ header .close {
     height: 150vh;
   }
   header .headerInfo .overflow .header {
-    padding-top: 227px;
+    padding-top: 150px;
     flex-direction: column-reverse;
     height: 100vh;
   }
@@ -379,6 +380,7 @@ header .close {
     height: 100%;
     display: flex;
     align-items: center;
+    padding-top: 0;
   }
   header .headerInfo .overflow .header .col2 .imgHeader {
     display: flex;
@@ -436,6 +438,13 @@ main .about .colsConatinerSectionOn .colSection-on {
   flex-direction: column;
   gap: 40px;
 }
+main .about .colsConatinerSectionOn .colSection-on .titleLocation {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  letter-spacing: 1px;
+  font-weight: normal;
+}
 main .about .colsConatinerSectionOn .colSection-on .titleLocation p {
   font-weight: 400;
   font-size: 1.2rem;
@@ -449,12 +458,16 @@ main .about .colsConatinerSectionOn .colSection-on .titleLocation p .destaque {
   color: #004DA6;
   font-weight: 600;
 }
+main .about .colsConatinerSectionOn .colSection-on .titleLocation p:last-child {
+  font-size: 1rem;
+  text-align: justify;
+}
 main .about .colsConatinerSectionOn .colSection-on .textLocation {
   width: 100%;
 }
 main .about .colsConatinerSectionOn .colSection-on .textLocation p {
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: normal;
   text-indent: 30px;
   text-align: justify;
 }
@@ -554,7 +567,7 @@ main .about .colsConatinerSectionOn .colSection-two {
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 20px;
 }
 main .about .colsConatinerSectionOn .colSection-two .title-two h3 {
   font-weight: 400;
@@ -564,10 +577,16 @@ main .about .colsConatinerSectionOn .colSection-two .title-two h3 strong {
   color: #000;
   font-weight: normal;
 }
+main .about .colsConatinerSectionOn .colSection-two .listService p:first-child {
+  color: #004DA6;
+  font-weight: 600;
+  padding-bottom: 20px;
+}
 main .about .colsConatinerSectionOn .colSection-two .listService ul {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  padding-bottom: 100px;
 }
 main .about .colsConatinerSectionOn .colSection-two .listService ul li i {
   padding-right: 10px;
