--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -69,14 +69,15 @@ header {
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        height: 90vh;
+        height:100  vh;
+        padding: 100px 0 0 0;
 
+        
         .col1 {
           flex: 1;
           display: flex;
           flex-direction: column;
           flex-wrap: wrap;
-          gap: 7px;
 
           .titleHeader {
             display: flex;
@@ -125,15 +126,15 @@ header {
         }
         .col2 {
           flex: 0.7;
-          height: 100%;
-          display: flex;
-          align-items: center;
-          padding-top: 150px;
+
           .imgHeader {
             display: flex;
-            justify-content: center;
+            justify-content: end;
+            overflow: hidden;
+            height: 580px;
             img {
               width: 100%;
+              object-fit: contain;
             }
           }
         }
@@ -141,7 +142,7 @@ header {
 
       .cardsHeaderContainer {
         position: absolute;
-        top: 100vh;
+        top: 115vh;
         width: 100%;
         display: flex;
         flex-direction: row;
@@ -408,7 +409,7 @@ header {
         }
 
         .cardsHeaderContainer {
-          top: 130vh;
+          top: 140vh;
           // flex-direction: column;
           justify-content: center;
           align-items: center;
