--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -56,10 +56,9 @@ main {
         gap: 40px;
 
         .titleLocation {
-          display: flex;
+          display: flex;  
           flex-direction: column;
           gap: 20px;
-          letter-spacing: 1px;
           font-weight: normal;
           p {
             font-weight: 400;
@@ -78,7 +77,6 @@ main {
           }
           p:last-child{
             font-size: 1rem;
-            text-align: justify;
             
           }
         }
@@ -90,7 +88,7 @@ main {
             font-size: 1rem;
             font-weight: normal;
             text-indent: 30px;
-            text-align: justify;
+            // text-align: justify;
             strong {
               font-weight: normal;
             }
@@ -151,9 +149,9 @@ main {
               justify-content: center;
               bottom: 49.5px;
             }
-            .navigation-auto div:not(:last-child) {
-              margin-right: 40px;
-            }
+                        .navigation-auto div:not(:last-child) {
+                          margin-right: 40px;
+                        }
   
             #radio1:checked ~ .navigation-auto .auto-btn1 {
               background-color: $secondary-color;
@@ -191,6 +189,7 @@ main {
             }
           }    
         }
+
       }
       
 
@@ -351,6 +350,46 @@ main {
         }
       }
     }
+  }
+
+  // CTA 
+  .faixaCTA{
+    background-color: $color-dark;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 0;
+    margin-bottom: 150px;
+    gap: 50px;
+    width: 100vw;
+    margin-left: calc(50% - 50vw);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    .containerCTA{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
+    h2{
+      background-color: transparent;
+      color: $primary-color;
+      font-size:2rem;
+      font-weight: 500;
+    }
+
+    a{
+      color: $secondary-color;
+      display: flex;
+      font-size: 1rem;
+      i{
+        font-size: 1.5rem;
+        margin-right: 7px;
+      }
+    }
+
+    a:not(:last-child){
+      margin-right: 120px;          
+    } 
   }
 
   // Testemunhas --------------------------
@@ -676,6 +715,27 @@ main {
       .subtitle--section{
         padding-bottom:70px ;
       }
+
+      .faixaCTA{
+        margin-right: 80px;
+        h2{
+          font-size:1.5rem;
+        }
+    
+        a{
+          color: $secondary-color;
+          display: flex;
+          font-size: 0.8rem;
+          i{
+            font-size: 1.5rem;
+            margin-right: 7px;
+          }
+        }
+    
+        a:not(:last-child){
+          margin-right: 70px;          
+        } 
+      }
   }
 
   .contact{
@@ -701,7 +761,10 @@ main {
         .colSection-on {
           .titleLocation {
             p {
-              font-size: 16px;
+              font-size: 1rem;
+            }
+            p:last-child{
+              font-size: 0.9rem;
             }
           }
 
@@ -714,6 +777,11 @@ main {
                   object-fit: cover;
                 }
               }
+            }
+          }
+          .textLocation {
+            p{
+              font-size: 0.9rem;
             }
           }
         }
@@ -754,7 +822,7 @@ main {
       }
     }
 
-    .services {
+    .ser    vices {
       padding: 0 0 150px 0;
       .service--cards {
         .card--item {
@@ -801,6 +869,28 @@ main {
          
         }
       }
+    }
+
+    .faixaCTA{
+      .containerCTA{
+        flex-wrap: wrap;
+        gap: 20px;
+      }
+      h2{
+        font-size:1.2rem;
+      }
+  
+      a{
+        font-size: 0.7rem;
+        i{
+          font-size: 1.5rem;
+          margin-right: 7px;
+        }
+      }
+  
+      a:not(:last-child){
+        margin-right: 40px;          
+      } 
     }
   }
 }
